# equations

./: .gitignore  .travis.yml  HLint.hs  LICENSE  README.md  equations.cabal
src/Control/: Equation.hs
src/Control/Equation/: Solve.hs  Types.hs
testsuite/: Main.hs
testsuite/Control/Equation/: Test.hs
testsuite/Control/Equation/Types/: Test.hs
