name: equations
version: 0.1.0.0
synopsis: Solve equations using Lens as variables
license: MIT
license-file: LICENSE
author: Alexey Kotlyarov
maintainer: a@koterpillar.com
category: Control
build-type: Simple
cabal-version: >=1.10

library
  exposed-modules: Control.Equation
  build-depends:
    lens >= 4.8,
    mtl >= 2.2,
    base >=4.7 && <4.8
  hs-source-dirs: src
  default-language: Haskell2010

Test-Suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: src, testsuite
  main-is: Main.hs
  build-depends:
    lens >= 4.8,
    mtl >= 2.2,
    -- test-only
    HTF >= 0.12,
    HUnit >= 1.2,
    -- base
    base >=4.7 && <4.8
  default-language: Haskell2010
